--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -3,25 +3,54 @@ name: CI (Vite) on Self-Hosted
 on:
   push:
     branches: [ main ]
-
+    
+permissions:
+  contents: read
+  packages: write                # สำคัญ: ต้องมีสิทธิ์เขียนแพ็กเกจเพื่อ push ไป GHCR
+  
+env:
+  REGISTRY: ghcr.io
+  IMAGE_NAME: ${{ github.resume }}   # owner/repo (GHCR ต้องเป็นตัวพิมพ์เล็ก)
+  
 jobs:
   build-and-restart:
-    runs-on: self-hosted  # ตรงกับ label ของ runner คุณ
+    runs-on: self-hosted # ตรงกับ label ของ runner คุณ
 
     steps:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Use Node.js 22
-        uses: actions/setup-node@v4
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
+      - name: Set up Buildx
+        uses: docker/setup-buildx-action@v3
+
+      - name: Login to GHCR
+        uses: docker/login-action@v3
         with:
-          node-version: 22
+          registry: ${{ env.REGISTRY }}
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Install deps (yarn)
-        run: yarn
+      - name: Docker metadata
+        id: meta
+        uses: docker/metadata-action@v5
+        with:
+          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
+          tags: |
+            type=ref,event=branch
+            type=ref,event=tag
+            type=sha
+            type=raw,value=latest,enable={{is_default_branch}}
 
-      - name: Build (Vite)
-        env:
-          NODE_ENV: production
-          CI: true
-        run: yarn run build  # ผลลัพธ์ที่ dist/
+      - name: Build & Push (multi-arch)
+        uses: docker/build-push-action@v6
+        with:
+          context: .
+          push: true
+          platforms: linux/amd64,linux/arm64   # ปรับได้ตามต้องการ
+          tags: ${{ steps.meta.outputs.tags }}
+          labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
