--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,30 +1,33 @@
-name: CI (Vite) on Self-Hosted
+name: CD (Compose build & push to GHCR)
 
 on:
   push:
-    branches: [ main ]
+    branches: [ "main" ]   # deploy เมื่อ push เข้า main
+    tags: [ "v*" ]         # และตอนออก tag เช่น v1.0.0
+  workflow_dispatch: {}
 
 permissions:
   contents: read
-  packages: write                # สำคัญ: ต้องมีสิทธิ์เขียนแพ็กเกจเพื่อ push ไป GHCR
-  
+  packages: write           # ต้องมีสิทธิ์เขียน package เพื่อ push GHCR
+
 env:
   REGISTRY: ghcr.io
-  IMAGE_NAME: maohnnn/resume   # owner/repo (GHCR ต้องเป็นตัวพิมพ์เล็ก)
-  
+
 jobs:
-  build-and-restart:
-    runs-on: self-hosted # ตรงกับ label ของ runner คุณ
+  compose-push:
+    runs-on: [self-hosted, linux, x64, docker]
 
     steps:
-      - name: Checkout
-        uses: actions/checkout@v4
+      - uses: actions/checkout@v4
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
+      - name: Set OWNER
+        run: echo "OWNER=$(echo '${{ github.repository_owner }}' | tr '[:upper:]' '[:lower:]')" >> $GITHUB_ENV
 
       - name: Set up Buildx
         uses: docker/setup-buildx-action@v3
+        with:
+          driver: docker-container
+          use: true
 
       - name: Login to GHCR
         uses: docker/login-action@v3
@@ -33,24 +36,31 @@ jobs:
           username: ${{ github.actor }}
           password: ${{ secrets.GITHUB_TOKEN }}
 
-      - name: Docker metadata
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ${{ env.REGISTRY }}/${{ env.IMAGE_NAME }}
-          tags: |
-            type=ref,event=branch
-            type=ref,event=tag
-            type=sha
-            type=raw,value=latest,enable={{is_default_branch}}
+      # คำนวณ TAGS ที่จะใช้ (latest บน main, หรือ vX.Y.Z ตอน tag, และ sha-xxxx เสมอ)
+      - name: Compute tags
+        run: |
+          TAGS="sha-${GITHUB_SHA::7}"
+          if [ "${{ github.ref_type }}" = "branch" ] && [ "${{ github.ref_name }}" = "${{ github.event.repository.default_branch }}" ]; then
+            TAGS="latest,$TAGS"
+          fi
+          if [ "${{ github.ref_type }}" = "tag" ]; then
+            TAGS="${GITHUB_REF_NAME},$TAGS"
+          fi
+          echo "TAGS=$TAGS" >> $GITHUB_ENV
 
-      - name: Build & Push (multi-arch)
-        uses: docker/build-push-action@v6
+      # Build & Push ทุก service จาก docker-compose.yml
+      - name: Compose build & push
+        uses: docker/bake-action@v5
         with:
-          context: .
+          files: |
+            docker-compose.yml
+          set: |
+            *.platform=linux/amd64
+            # เติมหลายแท็กให้ทุก target (ทุก service)
+            *.tags=${{ env.TAGS }}
+            *.cache-from=type=gha
+            *.cache-to=type=gha,mode=max
           push: true
-          platforms: linux/amd64,linux/arm64   # ปรับได้ตามต้องการ
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-          cache-from: type=gha
-          cache-to: type=gha,mode=max
+        env:
+          REGISTRY: ${{ env.REGISTRY }}
+          OWNER: ${{ env.OWNER }}
